# Deviation_pi

./: .gitignore  CMakeLists.txt  Help page.odt  VERSION.cmake  appveyor.yml
OLD/: CMakeLists.txt.bak
OLD/po/: POTFILES.in
buildwin/: ALL_BUILD.vcxproj  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  deviation-i18n.vcxproj  deviation-i18n.vcxproj.filters  deviation-po-update.vcxproj  deviation-po-update.vcxproj.filters  deviation-pot-update.vcxproj  deviation-pot-update.vcxproj.filters  deviation_pi.aps  deviation_pi.vcxproj  deviation_pi.vcxproj.filters  deviation_pi_pi.opensdf  deviation_pi_pi.sln  opencpn.lib  resource.h
buildwin/Debug/: deviation_pi.exp  deviation_pi.lib
buildwin/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
buildwin/Win32/Debug/deviation-i18n/deviation-i18n.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  deviation-i18n.lastbuildstate
buildwin/deviation_pi.dir/Debug/deviation_pi.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog
buildwin/expat-2.1.0/: expat.lib
buildwin/gtk/: cairo.lib
buildwin/gtk/include/cairo/: cairo-features.h
ci/: circleci-build-macos-universal.sh
cmake/: .PluginConfigure.cmake.kate-swp  PluginConfigure.cmake  PluginInstall.cmake  PluginPackage.cmake
data/: Help page.odt
libs/nmea0183/: sentence.cpp
manual/: antora.yml  site.yml
manual/deviation/: site.yml
manual/modules/ROOT/pages/: deviation_curve.adoc  index.adoc
po/: POTFILES.in  ar_SA.po  bg_BG.po  ca_ES.po  cs_CZ.po  da_DK.po  de_DE.po  deviation_pi.pot  el_GR.po  en_GB.po  es_EM.po  es_ES.po  et_EE.po  fi_FI.po  fil_PH.po  fr_FR.po  gl_ES.po  he_IL.po  hi_IN.po  hu_HU.po  id_ID.po  is_IS.po  it_IT.po  ja_JP.po  ko_KR.po  mr_IN.po  nb_NO.po  nl_NL.po  pl_PL.po  pt_BR.po  pt_PT.po  ro_RO.po  ru_RU.po  sv_SE.po  th_TH.po  tr_TR.po  vi_VN.po  zh_CN.po  zh_TW.po
src/: .bearingdlg.cpp.kate-swp  .directory  CompasDev1Main.cpp  CompasDev1Main.h  SharedStuff.cpp  SharedStuff.h  bearingdlg.cpp  bearingdlg.h  compass.cpp  compass.h  deviation_pi.cpp  deviation_pi.h  icons.cpp  icons.h  icons.sh  preferencedlg.cpp  preferencedlg.h  printing.cpp  printing.cpp.bck  printing.h  readwritexml.cpp  readwritexml.h  spa.cpp  spa.h  wxWTranslateCatalog.h
src/OLD-nmea0183/: nmea0183.cpp  nmea0183.hpp
